[package]
    name = "mxyz-engine"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    serde_json = "1.0"
    mxyz-database = { path = "../mxyz-database" }
    mxyz-universe = { path="../mxyz-universe" }
    mxyz-utils = { path="../mxyz-utils" }
    rand = "0.8.5"
    diesel = "1.4.8"

[dependencies.serde]
    version = "1.0"
    features = ["derive"]
